<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="IP231" Id="{8aac7190-3093-4eb1-a588-50b9fe727889}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IP231
VAR
	timer				: TON;
	bDoReading			: BOOL;
	
	bOnInit				: BOOL	:= TRUE;
	timerInit			: TON;
	
	nState				: INT;
	
	fbInit231_02_5350			: FB_InitPM;
	fbInit231_03_5350			: FB_InitPM;
	fbInit231_05_5350			: FB_InitPM;
	fbInit231_06_5350			: FB_InitPM;
	fbInit231_12_5350			: FB_InitPM;
	
	fbRead231_02_5350			: FB_ReadPM5350;
	fbRead231_03_5350			: FB_ReadPM5350;
	fbRead231_05_5350			: FB_ReadPM5350;
	fbRead231_06_5350			: FB_ReadPM5350;
	fbRead231_12_5350			: FB_ReadPM5350;
	
	fbInit231_01_5500			: FB_InitPM;
	fbInit231_04_5500			: FB_InitPM;
	fbInit231_07_5500			: FB_InitPM;
	fbInit231_11_5500			: FB_InitPM;
	fbInit231_18_5500			: FB_InitPM;
	fbInit231_20_5500			: FB_InitPM;
	fbInit231_22_5500			: FB_InitPM;
	
	fbRead231_01_5500			: FB_ReadPM5500;
	fbRead231_04_5500			: FB_ReadPM5500;
	fbRead231_07_5500			: FB_ReadPM5500;
	
	//Update 29-8-2022
	fbRead231_11_5500			: FB_ReadPM5350;
	
	fbRead231_18_5500			: FB_ReadPM5500;
	fbRead231_20_5500			: FB_ReadPM5500;
	fbRead231_22_5500			: FB_ReadPM5500;
	
	nCount						: DINT;
END_VAR

VAR CONSTANT
	STATE_INIT			:	INT		:= 0;
	STATE_READ2			:	INT		:= 20;
	STATE_READ3			:	INT		:= 30;
	STATE_READ5			:	INT		:= 50;
	STATE_READ6			:	INT		:= 60;
	STATE_READ12		:	INT		:= 90;
	STATE_READ1			:	INT		:= 10;
	STATE_READ4			:	INT		:= 40;
	STATE_READ7			:	INT		:= 70;
	STATE_READ11		:	INT		:= 110;
	STATE_READ18		:	INT		:= 180;
	STATE_READ20		:	INT		:= 200;
	STATE_READ22		:	INT		:= 220;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[timerInit(In:=TRUE, PT:=T#3S);
IF timerInit.Q THEN
	timerInit(In:=FALSE);
		bOnInit	:= FALSE;
	END_IF

IF bOnInit THEN
	fbInit231_02_5350(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 2,
						PM			:= pmDev.DB01_02_5350);
	fbInit231_03_5350(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 03,
						PM			:= pmDev.DB01_03_5350);
	fbInit231_05_5350(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 5,
						PM			:= pmDev.DB01_05_5350);
	fbInit231_06_5350(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 6,
						PM			:= pmDev.DB01_06_5350);
						
	fbInit231_11_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 11,
						PM			:= pmDev.DB01_11_5500);
						
	fbInit231_12_5350(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 12,
						PM			:= pmDev.DB01_12_5350);
						
	fbInit231_01_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 1,
						PM			:= pmDev.DB01_01_5500);
	fbInit231_04_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 4,
						PM			:= pmDev.DB01_04_5500);
	fbInit231_07_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 7,
						PM			:= pmDev.DB01_07_5500);
	
	fbInit231_18_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 18,
						PM			:= pmDev.DB01_18_5500);
	fbInit231_20_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 20,
						PM			:= pmDev.DB01_20_5500);
	fbInit231_22_5500(	sIpAddress	:= '10.91.37.231',
						nPort		:= 502,
						nUnitID		:= 22,
						PM			:= pmDev.DB01_22_5500);
END_IF

IF NOT bOnInit THEN
	timer(In:=TRUE, PT:=T#5M);
	IF timer.Q OR pmdev.bTrigReadCOmmision THEN
		timer(In:=FALSE);
		nState	:= STATE_READ2;
	END_IF
END_IF


CASE nState OF
STATE_INIT:
	nCount	:= nCount + 1;
STATE_READ2:
	fbRead231_02_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB01_02_5350);
	IF NOT fbRead231_02_5350.Q THEN
		nState	:= STATE_READ3;
		fbRead231_02_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB01_02_5350);
	END_IF
	
STATE_READ3:
	fbRead231_03_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB01_03_5350);
	IF NOT fbRead231_03_5350.Q THEN
		nState	:= STATE_READ5;
		fbRead231_03_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB01_03_5350);
	END_IF	

STATE_READ5:
	fbRead231_05_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB01_05_5350);
	IF NOT fbRead231_05_5350.Q THEN
		nState	:= STATE_READ6;
		fbRead231_05_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB01_05_5350);
	END_IF	
	
STATE_READ6:
	fbRead231_06_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB01_06_5350);
	IF NOT fbRead231_06_5350.Q THEN
		nState	:= STATE_READ11;
		fbRead231_06_5350(
		bExecute:=FALSE,
		PM := pmDev.DB01_06_5350);
	END_IF
	
STATE_READ11:

	
	fbRead231_11_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_11_5500);
	IF NOT fbRead231_11_5500.Q THEN
		nState	:= STATE_READ12;
		fbRead231_11_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_11_5500);
	END_IF
	
STATE_READ12:
	fbRead231_12_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB01_12_5350);
	IF NOT fbRead231_12_5350.Q THEN
		nState	:= STATE_READ1;
		fbRead231_12_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB01_12_5350);
	END_IF	
STATE_READ1:
	fbRead231_01_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_01_5500);
	IF NOT fbRead231_01_5500.Q THEN
		nState	:= STATE_READ4;
		fbRead231_01_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_01_5500);
	END_IF
STATE_READ4:
	fbRead231_04_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_04_5500);
	IF NOT fbRead231_04_5500.Q THEN
		nState	:= STATE_READ7;
		fbRead231_04_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_04_5500);
	END_IF

STATE_READ7:
	fbRead231_07_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_07_5500);
	IF NOT fbRead231_07_5500.Q THEN
		nState	:= STATE_READ18;
		fbRead231_07_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_07_5500);
	END_IF
	
STATE_READ18:
	fbRead231_18_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_18_5500);
	IF NOT fbRead231_18_5500.Q THEN
		nState	:= STATE_READ20;
		fbRead231_18_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_18_5500);
	END_IF
	
STATE_READ20:
	fbRead231_20_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_20_5500);
	IF NOT fbRead231_20_5500.Q THEN
		nState	:= STATE_READ22;
		fbRead231_20_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_20_5500);
	END_IF

STATE_READ22:
	fbRead231_22_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB01_22_5500);
	IF NOT fbRead231_22_5500.Q THEN
		nState	:= STATE_INIT;
		fbRead231_22_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB01_22_5500);
	END_IF
	
END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="IP231">
      <LineId Id="43" Count="22" />
      <LineId Id="351" Count="0" />
      <LineId Id="353" Count="2" />
      <LineId Id="352" Count="0" />
      <LineId Id="356" Count="0" />
      <LineId Id="66" Count="16" />
      <LineId Id="86" Count="19" />
      <LineId Id="281" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="122" Count="45" />
      <LineId Id="496" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="359" Count="0" />
      <LineId Id="368" Count="9" />
      <LineId Id="358" Count="0" />
      <LineId Id="170" Count="41" />
      <LineId Id="223" Count="34" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>