<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="IP234" Id="{bae48c5c-de97-41e1-9703-cd0d9ed9fc6c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM IP234
VAR
	timer				: TON;
	bDoReading			: BOOL;
	
	bOnInit				: BOOL	:= TRUE;
	timerInit			: TON;
	
	nState				: INT;
	
	fbInit234_01_5350			: FB_InitPM;
	fbInit234_03_5350			: FB_InitPM;
	fbInit234_05_5350			: FB_InitPM;
	fbInit234_07_5350			: FB_InitPM;
	fbInit234_08_5350			: FB_InitPM;
	
	fbRead234_01_5350			: FB_ReadPM5350;
	fbRead234_03_5350			: FB_ReadPM5350;
	fbRead234_05_5350			: FB_ReadPM5350;
	fbRead234_07_5350			: FB_ReadPM5350;
	fbRead234_08_5350			: FB_ReadPM5350;

	fbInit234_02_5500			: FB_InitPM;
	fbInit234_04_5500			: FB_InitPM;
	fbInit234_06_5500			: FB_InitPM;

	fbRead234_02_5500			: FB_ReadPM5500;
	fbRead234_04_5500			: FB_ReadPM5500;
	fbRead234_06_5500			: FB_ReadPM5500;
	
	nCount						: DINT;
END_VAR

VAR CONSTANT
	STATE_INIT			:	INT		:= 0;
	STATE_READ1			:	INT		:= 10;
	STATE_READ3			:	INT		:= 30;
	STATE_READ5			:	INT		:= 50;
	STATE_READ7			:	INT		:= 70;
	STATE_READ8			:	INT		:= 80;
	STATE_READ2			:	INT		:= 20;
	STATE_READ4			:	INT		:= 40;
	STATE_READ6			:	INT		:= 60;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[timerInit(In:=TRUE, PT:=T#3S);
IF timerInit.Q THEN
	timerInit(In:=FALSE);
		bOnInit	:= FALSE;
	END_IF

IF bOnInit THEN
	fbInit234_01_5350(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 1,
						PM			:= pmDev.DB04_01_5350);
	fbInit234_03_5350(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 3,
						PM			:= pmDev.DB04_03_5350);
	fbInit234_05_5350(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 5,
						PM			:= pmDev.DB04_05_5350);
	fbInit234_07_5350(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 7,
						PM			:= pmDev.DB04_07_5350);
	fbInit234_08_5350(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 8,
						PM			:= pmDev.DB04_08_5350);
						
	fbInit234_02_5500(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 2,
						PM			:= pmDev.DB04_02_5500);
	fbInit234_04_5500(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 4,
						PM			:= pmDev.DB04_04_5500);
	fbInit234_06_5500(	sIpAddress	:= '10.91.37.234',
						nPort		:= 502,
						nUnitID		:= 6,
						PM			:= pmDev.DB04_06_5500);
END_IF

IF NOT bOnInit THEN
	timer(In:=TRUE, PT:=T#5M);
	IF timer.Q OR pmdev.bTrigReadCOmmision  THEN
		timer(In:=FALSE);
		nState	:= STATE_READ1;
	END_IF
END_IF

CASE nState OF
STATE_INIT:
	nCount	:= nCount + 1;
STATE_READ1:
	fbRead234_01_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB04_01_5350);
	IF NOT fbRead234_01_5350.Q THEN
		nState	:= STATE_READ3;
		fbRead234_01_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB04_01_5350);
	END_IF
	
STATE_READ3:
	fbRead234_03_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB04_03_5350);
	IF NOT fbRead234_03_5350.Q THEN
		nState	:= STATE_READ5;
		fbRead234_03_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB04_03_5350);
	END_IF	

STATE_READ5:
	fbRead234_05_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB04_05_5350);
	IF NOT fbRead234_05_5350.Q THEN
		nState	:= STATE_READ7;
		fbRead234_05_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB04_05_5350);
	END_IF	
	
STATE_READ7:
	fbRead234_07_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB04_07_5350);
	IF NOT fbRead234_07_5350.Q THEN
		nState	:= STATE_READ8;
		fbRead234_07_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB04_07_5350);
	END_IF	
	
STATE_READ8:
	fbRead234_08_5350(
		bExecute:=TRUE,
		PM:= pmDev.DB04_08_5350);
	IF NOT fbRead234_08_5350.Q THEN
		nState	:= STATE_READ2;
		fbRead234_08_5350(
			bExecute:=FALSE,
			PM:= pmDev.DB04_08_5350);
	END_IF	
	
STATE_READ2:
	fbRead234_02_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB04_02_5500);
	IF NOT fbRead234_02_5500.Q THEN
		nState	:= STATE_READ4;
		fbRead234_02_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB04_02_5500);
	END_IF
STATE_READ4:
	fbRead234_04_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB04_04_5500);
	IF NOT fbRead234_04_5500.Q THEN
		nState	:= STATE_READ6;
		fbRead234_04_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB04_04_5500);
	END_IF

STATE_READ6:
	fbRead234_06_5500(
		bExecute:=TRUE,
		PM:= pmDev.DB04_06_5500);
	IF NOT fbRead234_06_5500.Q THEN
		nState	:= STATE_INIT;
		fbRead234_06_5500(
			bExecute:=FALSE,
			PM:= pmDev.DB04_06_5500);
	END_IF
	
END_CASE


]]></ST>
    </Implementation>
    <LineIds Name="IP234">
      <LineId Id="49" Count="48" />
      <LineId Id="113" Count="91" />
      <LineId Id="207" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>